fix gap tariff section

--- a/src/styles/sections/tariff.css
+++ b/src/styles/sections/tariff.css
@@ -279,6 +279,10 @@
         justify-self: center;
     }
 
+    .main__processing-personal-data-agreement {
+        gap: 14px;
+    }
+
     .main__submit-form {
         width: 100%;
         display: flex;
@@ -298,6 +302,6 @@
     }
 
     .main__processing-personal-data-agree-label {
-        width: 256px;
+        width: 226px;
     }
 }
